tools/crates/vendor/toml_edit/tests/fixtures/invalid/integer/leading-zero-sign-3.stderr
TOML parse error at line 1, column 25
  |
1 | leading-zero-sign-3 = +0_1
  |                         ^
expected newline, `#`
